AirquipUAT/force-app/main/default/objects/RC_Credential__mdt/RC_Credential__mdt.object-meta.xml
<CustomObject>
    <label>RC Credential</label>
    <pluralLabel>RC Credentials</pluralLabel>
</CustomObject>