AirquipUAT/force-app/main/default/objects/RC_Credential__mdt/fields/JWT_Token__c.field-meta.xml
<CustomField>
    <fullName>JWT_Token__c</fullName>
    <label>JWT Token</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>