AirquipUAT/force-app/main/default/objects/RC_Credential__mdt/fields/Sender_Number__c.field-meta.xml
<CustomField>
    <fullName>Sender_Number__c</fullName>
    <label>Sender Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>