AirquipUAT/force-app/main/default/objects/RC_Credential__mdt/fields/Server_URL__c.field-meta.xml
<CustomField>
    <fullName>Server_URL__c</fullName>
    <label>Server URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>